fixed background and resume icons and spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: #040404 url("../img/profile-edit-4.jpg") 0% 50% no-repeat;
+  background: #040404 url("../img/profile-edit-4.jpg") 30% 50% no-repeat;
   background-size: cover;
   left: 0;
   right: 0;
@@ -31,13 +31,6 @@ body::before {
 @media (min-width: 1024px) {
   body::before {
     background-attachment: fixed;
-  }
-}
-@media (max-width: 576px) {
-  body::before {
-    background: #040404 url("../img/profile-edit-4.jpg") 30% 50% no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
   }
 }
 
@@ -107,7 +100,7 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(255, 255, 255, 0.15);
   color: #fff;
   line-height: 1.1;
   margin-top: 5px;
